--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Multi-dimensional array implementation, inspired by ndarray.",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "lint": "eslint . --ignore-pattern coverage",
+    "test": "jasmine",
+    "coverage": "istanbul cover --include-all-sources -x **/spec/** -x **/examples/** jasmine",
+    "coveralls": "istanbul cover --include-all-sources -x **/spec/** -x **/examples/** jasmine --captureExceptions && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -25,5 +28,11 @@
   "bugs": {
     "url": "https://github.com/patgrasso/multiarray/issues"
   },
-  "homepage": "https://github.com/patgrasso/multiarray#readme"
+  "homepage": "https://github.com/patgrasso/multiarray#readme",
+  "devDependencies": {
+    "coveralls": "^2.11.15",
+    "eslint": "^3.11.0",
+    "istanbul": "^0.4.5",
+    "jasmine": "^2.5.2"
+  }
 }
